source/uniandes/lym/robot/control/Robot.java
/* Generated By:JavaCC: Do not edit this line. Robot.java */
package uniandes.lym.robot.control;

import uniandes.lym.robot.kernel.*;
import java.awt.Point;
import java.io.*;
import java.util.Vector;
import java.util.LinkedList;
import java.util.HashMap;

@SuppressWarnings("serial")
public class Robot implements RobotConstants {

        private RobotWorldDec world;

        void setWorld(RobotWorld w) {
                world = (RobotWorldDec) w;
        }

        String salida=new String();
        public static HashMap< String, Integer > variables = new HashMap< String, Integer >();
        public static LinkedList< String > metodos = new LinkedList< String >();

  final public boolean inicio(StringBuffer sistema) throws ParseException {
          salida = new String();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 36:
      label_1:
      while (true) {
        block();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 36:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
      }
          sistema.append(salida);
          {if (true) return true;}
      break;
    case 0:
      jj_consume_token(0);
                       {if (true) return false;}
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public void block() throws ParseException {
    label_2:
    while (true) {
      jj_consume_token(36);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 36:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case T_MOVE:
    case T_TURNRIGHT:
    case T_PUT:
    case T_PICK:
    case T_POP:
    case T_SKIP:
    case DEFVAR:
    case TURN:
    case FACE:
    case EQUALS:
    case MOVE_DIR:
    case RUN_DIRS:
    case MOVE_FACE:
    case WORD:
      one_line();
      break;
    case IF:
      if_conditional();
      break;
    case LOOP:
      loop_conditional();
      break;
    case REPEAT:
      repeat();
      break;
    case DEFUN:
      defun();
      break;
    default:
      jj_la1[3] = jj_gen;
      conditional();
    }
    label_3:
    while (true) {
      jj_consume_token(37);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 37:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
    }
  }

  final public void auxiliar() throws ParseException {
    label_4:
    while (true) {
      jj_consume_token(36);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 36:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_4;
      }
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case T_MOVE:
    case T_TURNRIGHT:
    case T_PUT:
    case T_PICK:
    case T_POP:
    case T_SKIP:
    case DEFVAR:
    case TURN:
    case FACE:
    case EQUALS:
    case MOVE_DIR:
    case RUN_DIRS:
    case MOVE_FACE:
    case WORD:
      one_line();
      break;
    case IF:
      if_conditional();
      break;
    case LOOP:
      loop_conditional();
      break;
    case REPEAT:
      repeat();
      break;
    case DEFUN:
      defun();
      break;
    default:
      jj_la1[6] = jj_gen;
      conditional();
    }
    jj_consume_token(37);
  }

  final public void command() throws ParseException {
          int x;
          String name;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case T_MOVE:
      jj_consume_token(T_MOVE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUMERO:
        x = numero();
                                    world.moveForward(x); salida = "Command: Moveforward";
        break;
      case WORD:
        name = jj_consume_token(WORD).image;
                                                                                                                   try {x=variables.get(name);world.moveForward(x); salida = "Command: Moveforward";} catch (Exception e) {salida = "Esta variable no se encuentra definida";}
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case T_TURNRIGHT:
      jj_consume_token(T_TURNRIGHT);
      jj_consume_token(36);
      jj_consume_token(37);
                                     world.turnRight();salida = "Command: Turnright";
      break;
    case T_POP:
      jj_consume_token(T_POP);
      jj_consume_token(36);
      x = numero();
      jj_consume_token(37);
                                          world.popBalloons(x); salida = "Command: Pop";
      break;
    case T_PUT:
      jj_consume_token(T_PUT);
      jj_consume_token(38);
      put();
      break;
    case T_PICK:
      jj_consume_token(T_PICK);
      jj_consume_token(38);
      pick();
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void instruction() throws ParseException {
          int x;
          String name;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DEFVAR:
      jj_consume_token(DEFVAR);
      name = jj_consume_token(WORD).image;
      x = numero();
                                                       variables.put(name, x);
      break;
    case EQUALS:
      jj_consume_token(EQUALS);
      name = jj_consume_token(WORD).image;
      x = numero();
                                                       variables.replace(name, x);
      break;
    case TURN:
      jj_consume_token(TURN);
      jj_consume_token(38);
      jj_consume_token(DIR);
      break;
    case FACE:
      jj_consume_token(FACE);
      jj_consume_token(38);
      jj_consume_token(FACE_TO);
      break;
    case MOVE_DIR:
      jj_consume_token(MOVE_DIR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUMERO:
        x = numero();
        break;
      case WORD:
        name = jj_consume_token(WORD).image;
                                                            x=variables.get(name);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(38);
      jj_consume_token(DIR);
      break;
    case RUN_DIRS:
      jj_consume_token(RUN_DIRS);
      jj_consume_token(36);
      label_5:
      while (true) {
        jj_consume_token(38);
        jj_consume_token(DIR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 38:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_5;
        }
      }
      jj_consume_token(37);
      break;
    case MOVE_FACE:
      jj_consume_token(MOVE_FACE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUMERO:
        x = numero();
        break;
      case WORD:
        name = jj_consume_token(WORD).image;
                                                             x=variables.get(name);
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(38);
      jj_consume_token(FACE_TO);
      break;
    case T_SKIP:
      jj_consume_token(T_SKIP);
      break;
    case WORD:
      name = jj_consume_token(WORD).image;
                                  if (variables.containsKey(name)) { } else {salida = "Esta variable no se encuentra definida";}
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void one_line() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case T_MOVE:
    case T_TURNRIGHT:
    case T_PUT:
    case T_PICK:
    case T_POP:
      command();
      break;
    case T_SKIP:
    case DEFVAR:
    case TURN:
    case FACE:
    case EQUALS:
    case MOVE_DIR:
    case RUN_DIRS:
    case MOVE_FACE:
    case WORD:
      instruction();
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void conditional() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
      jj_consume_token(NOT);
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FACING_P:
    case CAN_PUT_P:
    case CAN_PICK_P:
    case CAN_MOVE_P:
    case BLOCKED_P:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BLOCKED_P:
        jj_consume_token(BLOCKED_P);
        break;
      case FACING_P:
        jj_consume_token(FACING_P);
        break;
      case CAN_PUT_P:
        jj_consume_token(CAN_PUT_P);
        break;
      case CAN_PICK_P:
        jj_consume_token(CAN_PICK_P);
        break;
      case CAN_MOVE_P:
        jj_consume_token(CAN_MOVE_P);
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
  }

  final public void if_conditional() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(36);
    conditional();
    jj_consume_token(37);
    label_6:
    while (true) {
      auxiliar();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 36:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_6;
      }
    }
  }

  final public void loop_conditional() throws ParseException {
    jj_consume_token(LOOP);
    jj_consume_token(36);
    conditional();
    jj_consume_token(37);
    label_7:
    while (true) {
      auxiliar();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 36:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_7;
      }
    }
  }

  final public void repeat() throws ParseException {
          int x;
          String name;
    jj_consume_token(REPEAT);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMERO:
      x = numero();
      break;
    case WORD:
      name = jj_consume_token(WORD).image;
                                                          x=variables.get(name);
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_8:
    while (true) {
      auxiliar();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 36:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_8;
      }
    }
  }

  final public void defun() throws ParseException {
          String name;
    jj_consume_token(DEFUN);
    name = jj_consume_token(WORD).image;
    jj_consume_token(36);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUMERO:
      case WORD:
        ;
        break;
      default:
        jj_la1[21] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WORD:
        jj_consume_token(WORD);
        break;
      case NUMERO:
        jj_consume_token(NUMERO);
        break;
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(37);
    label_10:
    while (true) {
      auxiliar();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 36:
        ;
        break;
      default:
        jj_la1[23] = jj_gen;
        break label_10;
      }
    }
                                                                                          metodos.add(name);
  }

  final public void put() throws ParseException {
                int f=1;
                String name;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case T_CHIPS:
      jj_consume_token(T_CHIPS);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUMERO:
        f = numero();
                                     world.putChips(f); salida = "Command: Put Chips";
        break;
      case WORD:
        name = jj_consume_token(WORD).image;
                                                                                                               try {f=variables.get(name);world.putChips(f);salida = "Command: Put Chips";} catch (Exception e) {salida = "Esta variable no se encuentra definida";}
        break;
      default:
        jj_la1[24] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case T_BALLOONS:
      jj_consume_token(T_BALLOONS);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUMERO:
        f = numero();
                                        world.putBalloons(f); salida = "Command: Put Balloons";
        break;
      case WORD:
        name = jj_consume_token(WORD).image;
                                                                                                                        try {f=variables.get(name);world.putBalloons(f); salida = "Command: Put Balloons";} catch (Exception e) {salida = "Esta variable no se encuentra definida";}
        break;
      default:
        jj_la1[25] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[26] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void pick() throws ParseException {
                int f=1;
                String name;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case T_CHIPS:
      jj_consume_token(T_CHIPS);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUMERO:
        f = numero();
                                     world.pickChips(f);salida = "Command: Pick chips";
        break;
      case WORD:
        name = jj_consume_token(WORD).image;
                                                                                                                try {f=variables.get(name);world.pickChips(f);salida = "Command: Pick chips";} catch (Exception e) {salida = "Esta variable no se encuentra definida";}
        break;
      default:
        jj_la1[27] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case T_BALLOONS:
      jj_consume_token(T_BALLOONS);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUMERO:
        f = numero();
                                        world.grabBalloons(f);salida="Command:  Pick balloons";
        break;
      case WORD:
        name = jj_consume_token(WORD).image;
                                                                                                                        try {f=variables.get(name);world.grabBalloons(f);salida="Command:  Pick balloons";} catch (Exception e) {salida = "Esta variable no se encuentra definida";}
        break;
      default:
        jj_la1[28] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[29] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

        /**
	 *  reconoce un numero entero sin signo
	 * @return el valor entero correspondiente al valor reconocido
	 */
  final public int numero() throws ParseException, Error {
                int total=1;
    jj_consume_token(NUMERO);
                        try
                        {
                                total = Integer.parseInt(token.image);
                        }
                        catch (NumberFormatException ee)
                        {
                                // Dada la forma de NUMERO, sabemos que solo puede tener d�gitos
                                // Por lo tanto, lo unico que podria pasar es que el numero sea muy grande
                                {if (true) throw new Error("Number out of bounds: " + token.image + "!!");}
                        }
                        {if (true) return total;}
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public RobotTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[30];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x0,0x1,0x0,0x7fbfe0,0x0,0x0,0x7fbfe0,0x0,0x3e0,0x0,0x0,0x0,0x7e8400,0x7e87e0,0x4000,0xf800000,0xf800000,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0xc0000000,0x0,0x0,0xc0000000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x10,0x10,0x10,0x2,0x20,0x10,0x2,0x3,0x0,0x3,0x40,0x3,0x2,0x2,0x0,0x0,0x0,0x10,0x10,0x3,0x10,0x3,0x3,0x10,0x3,0x3,0x0,0x3,0x3,0x0,};
   }

  /** Constructor with InputStream. */
  public Robot(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Robot(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new RobotTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 30; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 30; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Robot(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new RobotTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 30; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 30; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Robot(RobotTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 30; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(RobotTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 30; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[39];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 30; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 39; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
